# E-commerce-Personal-Shopper-Agent

./:  .env.example   .gitignore  .env  README.md  api.py  main.py  package-lock.json  pyproject.toml  requirements.txt  workflow_graph.md
data/evaluation/: evaluation_data.json
data/processed/: all_chunks.json
data/raw/: faq_data.json  sutra_products_cleaned.csv  sutra_products_masri.csv
db/: ecommerce_products.db  init_db.py  schema.sql
my-ecommerce-agent/: package-lock.json  package.json
my-ecommerce-agent/src/: App.css  App.tsx
my-ecommerce-agent/src/components/: ChatPane.tsx  HistoryPanel.tsx  ProductCard.tsx  ProductGrid.tsx  ProductPane.tsx  types.ts
notebooks/: faq_rag.ipynb  simple_rag.ipynb  workflow_graph.md
src/: __init__.py
src/agents/: config.py  graph.py  main.py
src/agents/prompts/: evaluator.txt  faq_generator.txt  generator.txt  orchestrator.txt
src/agents/schemas/: agent_state.py  evaluator_schemas.py  tool_schemas.py
src/agents/tools/: conversation_aware_search.py  faq_search.py  product_search.py
src/agents/workflows/: evaluator_node.py  faq_workflow.py  generator_node.py  orchestrator.py  search_node.py  working_memory.py
src/rag/: __init__.py  chunking.py  config.py  data_ingestion.py  example.py  main.py  retrieval.py  vectorstore.py
src/vector_db/: __init__.py  config.py  embedding.py  main.py  search.py  utils.py  vector_store.py
src/vector_db/output_metrices/: products_retrieval.txt
